This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-05-30:

- Fixed a bug in the 'type -t'/'whence -t' output for an undefined function.

- The autoloadable directory stack and menu-based cd functions in the 'fun'
  directory have been reorganised and fixed to play well together when that
  directory is added to FPATH.

2023-05-29:

- Fixed a bug in bracket expressions in glob patterns where quoting a '!'
  (e.g., to disable its negator function) caused a '\' to be wrongly matched.
  For example,
	case '\' in ['!'X]) echo BAD;; esac
  no longer outputs BAD, and
	touch '\'; ls ['!'X]
  no longer incorrectly lists the file '\'.

2023-05-28:

- Fixed a bug, introduced on 2020-06-08 and exacerbated on 2022-07-02, where
  the exit status of a script did not reflect the signal with the 9th bit
  set if the script exited on receiving a signal and an EXIT trap was set.

2023-05-27:

- Fixed a bug in the handling of backslashes in pathname expansion patterns
  resulting from field splitting. For example, the following:
	$ mkdir testdir; cd testdir; touch b; p='[a\-c]'; echo $p
  now correctly recognises the backslash escape and no longer outputs 'b'.

- The 2023-05-19 fix for brace expansion interfering with extended patterns has
  been improved to also recognise and handle extended patterns that are parts
  of larger patterns, e.g., 'ls file~(E)[[:digit:]]{3,6}\.txt$' now works.

2023-05-19:

- Fixed a bug in the loop invariants optimizer where a variable for which
  a .get or .getn discipline function is set within a loop is incorrectly
  treated as invariant.

- Fixed two bugs in pathname expansion:
  1. Brace expansion interfered with EREs and other extended pattern
     types used with ~(...) pattern option prefixes, e.g. the {3,6} in